force-app/main/default/objects/Campaign_Type_RecordType_Mapping__c/Campaign_Type_RecordType_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>mapping master campaign type with child campaign record type</description>
    <label>Campaign Type RecordType Mapping</label>
</CustomObject>