force-app/main/default/objects/Campaign_Type_RecordType_Mapping__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>