force-app/main/default/objects/Campaign_Type_RecordType_Mapping__c/fields/RecordType_Id__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecordType Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>