force-app/main/default/objects/Campaign_Type_RecordType_Mapping__c/fields/RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecordType Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>